--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 base_url: "/blog"
-url: "https://merelylogical.github.io/blog"
+url: "https://merelylogical.github.io"
 theme: jekyll-theme-midnight
 sass:
   style: compressed
