--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 base_url: "/blog"
 url: "https://merelylogical.github.io"
-theme: "just-the-docs"
+remote_theme: "just-the-docs/just-the-docs@v0.4.0.rc3"
 sass:
   style: compressed
 compress_html:
