--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 base_url: "/blog"
 url: "https://merelylogical.github.io"
+title: "ML's Blog"
 remote_theme: "just-the-docs/just-the-docs@v0.4.0.rc3"
 sass:
   style: compressed
