--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"scripts": {
 		"dev": "DIST_DIR=.next next dev -p 3300 --turbopack",
 		"build": "next build",
-		"postbuild": "pagefind --site ./out/blog"
+		"postbuild": "pagefind --site ./out --output-path ./out/_pagefind"
 	},
 	"dependencies": {
 		"@types/node": "24.3.1",
