--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 		"postbuild": "pagefind --site ./out --output-path ./out/_pagefind"
 	},
 	"dependencies": {
-		"@types/node": "24.3.1",
-		"@types/react": "19.1.12",
+		"@types/node": "^24.3.1",
+		"@types/react": "^19.1.12",
 		"next": "^15.5.2",
 		"nextra": "^4.4.0",
 		"nextra-theme-docs": "^4.4.0",
